# AI-Native-Microservice

./: .env.example  .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml  render.yaml
.github/workflows/: ci.yml  deploy.yml
app/: __init__.py  main.py
app/api/: dependencies.py  routes.py
app/core/: config.py
app/models/: schemas.py
app/services/: processor.py  provider_router.py  providers.py
app/static/: app.js  index.html  styles.css
app/telemetry/: __init__.py  metrics.py
docs/: architecture.md  phases.md  render-deployment.md  runbook.md
helm/ai-native-microservice/: Chart.yaml  values.yaml
helm/ai-native-microservice/templates/: _helpers.tpl  configmap.yaml  deployment.yaml  hpa.yaml  service.yaml  serviceaccount.yaml
k8s/: configmap.yaml  deployment.yaml  hpa.yaml  namespace.yaml  service.yaml  serviceaccount.yaml
monitoring/: prometheus-rules.yaml
monitoring/grafana/dashboards/: ai-native-overview.json
scripts/: load_sample.sh  smoke_test.sh
terraform/: README.md  main.tf  outputs.tf  variables.tf
tests/: test_api.py  test_frontend.py  test_jobs_and_cost.py  test_metrics.py
